--- a/functions/local.settings.development.json
+++ b/functions/local.settings.development.json
@@ -3,6 +3,7 @@
     "Values": {
         "AzureWebJobsStorage": "UseDevelopmentStorage=true",
         "FUNCTIONS_WORKER_RUNTIME": "dotnet",
-        "AzureWebJobsServiceBus" : "<AzureWebJobsServiceBus>"
+        "AzureWebJobsServiceBus" : "<AzureWebJobsServiceBus>",
+        "sqldb_connection" : "Server=localhost,1433; Database=Master; User=sa; Password =StrongPassword#999;"
     }
 }
