--- a/app/appsettings.Development.template.json
+++ b/app/appsettings.Development.template.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BeershopDatabase": "Server=localhost,1433; Database=Master; User=sa; Password =StrongPassword#999;"
+  },
+  "environmentVariables": {
+    "SERVICE_BUS_CONNECTION_STRING": "<CONNECTION_STRING>"
   }
 }
