--- a/app/appsettings.Development.template.json
+++ b/app/appsettings.Development.template.json
@@ -7,10 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "BeershopDatabase": "Server=localhost,1433; Database=Master; User=sa; Password =StrongPassword#999;"
-  },
   "environmentVariables": {
-    "SERVICE_BUS_CONNECTION_STRING": "<CONNECTION_STRING>"
+    "SERVICE_BUS_CONNECTION_STRING": "<CONNECTION_STRING>",
+    "sqldb_connection": "Server=localhost,1433; Database=Master; User=sa; Password =StrongPassword#999;"
   }
 }
