--- a/infrastructure/main/env/beershop-dev.yaml
+++ b/infrastructure/main/env/beershop-dev.yaml
@@ -8,8 +8,9 @@ rg_location: eastus
 st_replication: "LRS"
 
 # SQL Server
-sqldb_edition: Basic
 sql_public_access_enabled: true
+sql_sku_name: Basic
+sql_zone_redudant: false
 
 # Service Bus
 bus_sku: Basic
