--- a/app/appsettings.Development.template.json
+++ b/app/appsettings.Development.template.json
@@ -8,5 +8,5 @@
   },
   "AllowedHosts": "*",
   "SERVICE_BUS_CONNECTION_STRING": "<CONNECTION_STRING>",
-  "sqldb_connection": "Server=localhost,1433; Database=Master; User=sa; Password =StrongPassword#999;"
+  "PSQL_CONNECTION_STRING": "Host=localhost;Port=5432;Username=postgres;Password=StrongPassword#999;Database=pg;"
 }
