--- a/app/appsettings.Development.template.json
+++ b/app/appsettings.Development.template.json
@@ -8,5 +8,10 @@
   },
   "AllowedHosts": "*",
   "SERVICE_BUS_CONNECTION_STRING": "<CONNECTION_STRING>",
-  "PSQL_CONNECTION_STRING": "Host=localhost;Port=5432;Username=postgres;Password=StrongPassword#999;Database=pg;"
+  "PSQL_CONNECTION_STRING": "Host=localhost;Port=5432;Username=postgres;Password=StrongPassword#999;Database=pg;",
+  "PGUSER": "postgres",
+  "PGHOST": "localhost",
+  "PGPASSWORD": "StrongPassword#999",
+  "PGDATABASE": "pg",
+  "PGPORT": 5432
 }
