--- a/functions/package.json
+++ b/functions/package.json
@@ -13,11 +13,11 @@
   "description": "",
   "devDependencies": {
     "@azure/functions": "^1.2.2",
-    "@types/mssql": "^6.0.3",
+    "@types/pg": "^7.14.4",
     "npm-run-all": "^4.1.5",
     "typescript": "^3.9.6"
   },
   "dependencies": {
-    "mssql": "^6.2.0"
+    "pg": "^8.3.0"
   }
 }
