--- a/app/azure-pipelines.yml
+++ b/app/azure-pipelines.yml
@@ -40,4 +40,5 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           dev
+          staging
           prod
