--- a/functions/azure-pipelines.yml
+++ b/functions/azure-pipelines.yml
@@ -40,4 +40,6 @@ stages:
         dockerfile: $(dockerfilePath)
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
-          $(tag)
+          dev
+          staging
+          prod
