--- a/app/azure-pipelines.yml
+++ b/app/azure-pipelines.yml
@@ -39,6 +39,4 @@ stages:
         dockerfile: $(dockerfilePath)
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
-          dev
-          staging
-          prod
+          latest
