--- a/functions/azure-pipelines.yml
+++ b/functions/azure-pipelines.yml
@@ -40,6 +40,4 @@ stages:
         dockerfile: $(dockerfilePath)
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
-          dev
-          staging
-          prod
+          latest
