--- a/app/appsettings.Development.json
+++ b/app/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "BEERSHOP_SERVICEBUS_PRIMARY_CONNECTION_STRING": "<CONNECTION_STRING>",
+  "PGUSER": "postgres",
+  "PGHOST": "localhost",
+  "PGPASSWORD": "StrongPassword#999",
+  "PGDATABASE": "pg",
+  "PGPORT": 5432
 }
